force-app/main/default/objects/Gestion_de_imagenes__c/Gestion_de_imagenes__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Gestión de Imágenes</label>
</CustomObject>