force-app/main/default/objects/Gestion_de_imagenes__c/fields/Imagen_ERROR__c.field-meta.xml
<CustomField>
    <fullName>Imagen_ERROR__c</fullName>
    <label>Imagen ERROR</label>
    <length>200</length>
    <type>Text</type>
</CustomField>