force-app/main/default/objects/Gestion_de_imagenes__c/fields/ImagenOK__c.field-meta.xml
<CustomField>
    <fullName>ImagenOK__c</fullName>
    <label>ImagenOK</label>
    <length>200</length>
    <type>Text</type>
</CustomField>