force-app/main/default/objects/Gestion_de_imagenes__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <label>Warning</label>
    <length>200</length>
    <type>Text</type>
</CustomField>